        ConsoleLoggerEngine::setConsoleFormattingEnabled(), ConsoleLoggerEngine::consoleFormattingEnabled()
        and ConsoleLoggerEngine::setConsoleFormattingHint().
        Also, a bunch of known colors and escape related characters were added to LoggerEngines.h.
        Note that this does not work on Windows.
    [+] Added Logger::registerFormattingEngine().

    [#] All debug and trace logging macros (LOG_DEBUG, LOG_DEBUG_P etc.) are now defined as noop's ((void)0) in release mode.
    [#] Formatting engine change detected messages are now debug messages, not normal log messages anymore.

    ============================
    QtilitiesCore:
    ============================
    [+] Added new Zipper class which is a thin Qt-api based wrapper around the command line utility
        from the 7-zip project called 7za.
    [+] Added new generic property related classes: GenericProperty, GenericPropertyManager.
    [+] Added QtilitiesProcess::setProcessBufferMessageTypeHint(). Also, added new
        class ProcessBufferMessageTypeHint used in this function.
    [+] Added FileUtils::toUnixPath().
    [+] Added FileUtils::writeTextFile().
    [+] Added FileUtils::readTextFile().
    [+] QtilitiesProcess:startProcess() got a new timeout parameter which allows defining a timeout for the process.
    [+] QtilitiesProcess now has the ability to store all buffered messages from a process for you in something
        called a last run buffer. See the new QtilitiesProcess::lastRunBuffer() and related functions for more information.

    [#] QtilitiesProcess::logProgressOutput() and QtilitiesProcess::logProgressError() are now protected slots, allowing
        subclasses to reimplement its functionality. Also, bunch of improvements internally in QtilitiesProcess and
        detailed documentation how messages from the backend process are buffered was added.
    [#] Changed debug messages in Observer's destructor to trace messages.