@@ -26,6 +26,7 @@ https://github.com/JPNaude/Qtilities/issues/milestones
         Also, a bunch of known colors and escape related characters were added to LoggerEngines.h.
         Note that this does not work on Windows.
     [+] Added Logger::registerFormattingEngine().
+	[+] Added Logger::loggerEngineReferenceForFile().
 
     [#] All debug and trace logging macros (LOG_DEBUG, LOG_DEBUG_P etc.) are now defined as noop's ((void)0) in release mode.
     [#] Formatting engine change detected messages are now debug messages, not normal log messages anymore.
@@ -44,6 +45,7 @@ https://github.com/JPNaude/Qtilities/issues/milestones
     [+] QtilitiesProcess:startProcess() got a new timeout parameter which allows defining a timeout for the process.
     [+] QtilitiesProcess now has the ability to store all buffered messages from a process for you in something
         called a last run buffer. See the new QtilitiesProcess::lastRunBuffer() and related functions for more information.
+	[+] Added QtilitiesProcess::assignFileLoggerEngineToProcess().
 
     [#] QtilitiesProcess::logProgressOutput() and QtilitiesProcess::logProgressError() are now protected slots, allowing
         subclasses to reimplement its functionality. Also, bunch of improvements internally in QtilitiesProcess and
